@@ -211,3 +211,13 @@ class ZopeDatabase(ZODBDatabase):
                 return (real_root, real_path, container_class)
         raise LookupError('Nothing known about mount path %s' % mount_path)
     
+def default_zpublisher_encoding(value):
+    # This is a bit clunky but necessary :-(
+    # These modules are imported during the configuration process
+    # so a module-level call to getConfiguration in any of them
+    # results in getting config data structure without the necessary
+    # value in it.
+    from ZPublisher import Converters, HTTPRequest, HTTPResponse
+    Converters.default_encoding = value
+    HTTPRequest.default_encoding = value
+    HTTPResponse.default_encoding = value
