@@ -33,6 +33,10 @@ Zope Changes
 
     Bugs Fixed
 
+      - Collector #1490: Added a new zope.conf option to control the
+        character set used to encode unicode data that reaches
+        ZPublisher without any specified encoding.
+
       - disabled ".. include" directive for all the ZReST product and the 
         reStructuredText package
 
